# cocktail_JEPA

./: .env.example  .gitignore  README.md  pyproject.toml
demo/: demo_data.json  index.html
demo_app/: app.py
demo_app/static/: index.html
eval/: README.md  human_drinks.jsonl
notebooks/: 01_explore_corpus.py
scripts/: ablation_table.py  analyze_scramble.py  baseline_table.py  bootstrap_auroc.py  build_corpus.py  check.py  demo.py  evaluate.py  export_demo_data.py  generate.py  human_eval.py  parse_new_sources.py  pmi_table.py  prepare_data.py  train.py  train_contrastive.py  train_mae.py  transfer.py
src/cocktail_jepa/: __init__.py  config.py  logging.py
src/cocktail_jepa/data/: __init__.py  dataset.py  perturb.py  splits.py  vocab.py
src/cocktail_jepa/energy/: __init__.py  baselines.py  bootstrap.py  energy.py  pmi_baseline.py
src/cocktail_jepa/generate/: __init__.py  generate.py  resolve.py
src/cocktail_jepa/model/: __init__.py  contrastive.py  encoder.py  jepa.py  loss.py  mae.py  tokens.py
src/cocktail_jepa/train/: __init__.py  checkpoint.py  loop.py
src/cocktail_jepa/transfer/: __init__.py  labels.py  sft.py
tests/: test_station.py
